@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2024-01-22T16:19:31Z",
+  "timestamp" : "2024-01-23T01:10:15Z",
   "count_outdated" : 1150,
   "uniques_outdated" : 728,
-  "count" : 1170,
+  "count" : 1171,
   "uniques" : 741,
   "clones" : [
     {
       "timestamp": "2024-01-09T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count_decinc": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -97,9 +97,9 @@
     },
     {
       "timestamp": "2024-01-22T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
