@@ -1,3 +1,12 @@
+2024-01-23T01:10:15Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7619574492 # 48
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-23
+* notice: last 14d: unq all: 4 20
+* notice: prev accum: outdated-unq outdated-all / unq all: 728 1150 / 741 1170
+* notice: next accum: outdated-unq outdated-all / unq all: 728 1150 / 741 1171
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -1 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2024-01-09 2024-01-22]
+
 2024-01-22T16:19:31Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7614154382 # 47
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-22
